deploy/manifests/mlflow/deployment.yaml
# create mlflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: europe-docker.pkg.dev/pbl6-363916/mirror/mlflow
          imagePullPolicy: Always
          command:
            - "python"
          args:
            - "main.py"
            - "--port"
            - "5000"
            - "--workers"
            - "1"
            - "--static-prefix"
            - "/"
            - "--gunicorn-opts='--timeout=120'"
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 20m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 1024Mi
