deploy/manifests/mlflow/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mlflow
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /mlflow/
      route:
        - destination:
            host: mlflow.mlflow.svc.cluster.local
            port:
              number: 80
